tests/types-first-function-statics3/types-first-function-statics3.exp
Error --------------------------------------------------------------------------------------------------------- b.js:8:1

Cannot create `Component` element because property `other` is missing in `Props` [1] but exists in props [2].

   b.js:8:1
   8| <Component other={1}/>;
      ^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   a.js:9:27
   9| const Component = (props: Props) => <div />;
                                ^^^^^ [1]



Found 1 error
